@@ -1,60 +1,57 @@
 package com.cosmocraft.trading_cells.feature.ironfarm.domain.model;
 
-import com.cosmocraft.trading_cells.feature.machines.application.MachineSettings;
-
-public final class IronFarmCycle {
-    private IronFarmCycle() {
+public record IronFarmCycle(
+        int cycleTicks,
+        int oneVillagerMultiplier,
+        int twoVillagerMultiplier,
+        int threeVillagerMultiplier,
+        int golemAttackTicks,
+        int golemHitInterval,
+        int golemRedFlashTicks
+) {
+    public IronFarmCycle {
+        cycleTicks = Math.max(1, cycleTicks);
+        oneVillagerMultiplier = Math.max(0, oneVillagerMultiplier);
+        twoVillagerMultiplier = Math.max(0, twoVillagerMultiplier);
+        threeVillagerMultiplier = Math.max(0, threeVillagerMultiplier);
+        golemAttackTicks = Math.clamp(golemAttackTicks, 0, cycleTicks);
+        golemHitInterval = Math.max(1, golemHitInterval);
+        golemRedFlashTicks = Math.clamp(golemRedFlashTicks, 0, golemHitInterval - 1);
     }
 
-    public static int cycleTicks() {
-        return MachineSettings.values().ironFarmCycleTicks();
-    }
-
-    public static int multiplier(int villagerCount) {
-        return switch (Math.max(0, Math.min(3, villagerCount))) {
-            case 1 -> MachineSettings.values().ironFarmOneVillagerMultiplier();
-            case 2 -> MachineSettings.values().ironFarmTwoVillagerMultiplier();
-            case 3 -> MachineSettings.values().ironFarmThreeVillagerMultiplier();
+    public int multiplier(int villagerCount) {
+        return switch (Math.clamp(villagerCount, 0, 3)) {
+            case 1 -> oneVillagerMultiplier;
+            case 2 -> twoVillagerMultiplier;
+            case 3 -> threeVillagerMultiplier;
             default -> 0;
         };
     }
 
-    public static boolean isGolemVisible(int cycleTicks) {
-        return cycleTicks >= cycleTicks() - golemAttackTicks();
+    public boolean isGolemVisible(int currentTicks) {
+        return currentTicks >= cycleTicks - golemAttackTicks;
     }
 
-    public static boolean isGolemHitTick(int cycleTicks) {
-        if (!isGolemVisible(cycleTicks) || cycleTicks >= cycleTicks()) {
+    public boolean isGolemHitTick(int currentTicks) {
+        if (!isGolemVisible(currentTicks) || currentTicks >= cycleTicks) {
             return false;
         }
-        return (cycleTicks - (cycleTicks() - golemAttackTicks())) % golemHitInterval() == 0;
+        return (currentTicks - (cycleTicks - golemAttackTicks)) % golemHitInterval == 0;
     }
 
-    public static boolean hasRedHitFlash(int cycleTicks) {
-        if (!isGolemVisible(cycleTicks)) {
+    public boolean hasRedHitFlash(int currentTicks) {
+        if (!isGolemVisible(currentTicks)) {
             return false;
         }
-        int elapsed = cycleTicks - (cycleTicks() - golemAttackTicks());
-        return elapsed % golemHitInterval() < golemRedFlashTicks();
+        int elapsed = currentTicks - (cycleTicks - golemAttackTicks);
+        return elapsed % golemHitInterval < golemRedFlashTicks;
     }
 
-    public static boolean isRedHitFlashEnding(int cycleTicks) {
-        if (!isGolemVisible(cycleTicks)) {
+    public boolean isRedHitFlashEnding(int currentTicks) {
+        if (!isGolemVisible(currentTicks)) {
             return false;
         }
-        int elapsed = cycleTicks - (cycleTicks() - golemAttackTicks());
-        return elapsed % golemHitInterval() == golemRedFlashTicks();
-    }
-
-    private static int golemAttackTicks() {
-        return Math.min(cycleTicks(), MachineSettings.values().ironGolemAttackTicks());
-    }
-
-    private static int golemHitInterval() {
-        return Math.max(1, MachineSettings.values().ironGolemHitInterval());
-    }
-
-    private static int golemRedFlashTicks() {
-        return Math.min(golemHitInterval() - 1, MachineSettings.values().ironGolemRedFlashTicks());
+        int elapsed = currentTicks - (cycleTicks - golemAttackTicks);
+        return elapsed % golemHitInterval == golemRedFlashTicks;
     }
 }
